# CSUN-Dashboard

./: .gitignore  Aptfile  Pipfile  Procfile  babel.config.js  jest.config.js  jest.config.ts  package-lock.json  package.json  requirements.txt  tempCodeRunnerFile.python  todo.md
code-assets/backend/dead/: Cargo.toml  csundash.ini  csundash.py  wsgi.py
code-assets/backend/dead/json_catalog/: AAS_catalog.json  ACCT_catalog.json  AE_catalog.json  AFRS_catalog.json  AIS_catalog.json  AM_catalog.json  ANTH_catalog.json  ARAB_catalog.json  ARMN_catalog.json  ART_catalog.json  ASTR_catalog.json  ATHL_catalog.json  BANA_catalog.json  BIOL_catalog.json  BLAW_catalog.json  BUS_catalog.json  CADV_catalog.json  CAS_catalog.json  CCE_catalog.json  CD_catalog.json  CECS_catalog.json  CE_catalog.json  CHEM_catalog.json  CHIN_catalog.json  CHS_catalog.json  CIT_catalog.json  CJS_catalog.json  CLAS_catalog.json  CM_catalog.json  COMP_catalog.json  COMS_catalog.json  CTVA_catalog.json  DEAF_catalog.json  ECE_catalog.json  ECON_catalog.json  EDUC_catalog.json  EED_catalog.json  ELPS_catalog.json  ENGL_catalog.json  EPC_catalog.json  (+36 more)
code-assets/backend/dead/json_catalog_safe/: AAS_catalog.json  ACCT_catalog.json  AE_catalog.json  AFRS_catalog.json  AIS_catalog.json  AM_catalog.json  ANTH_catalog.json  ARAB_catalog.json  ARMN_catalog.json  ART_catalog.json  ASTR_catalog.json  ATHL_catalog.json  BANA_catalog.json  BIOL_catalog.json  BLAW_catalog.json  BUS_catalog.json  CADV_catalog.json  CAS_catalog.json  CCE_catalog.json  CD_catalog.json  CECS_catalog.json  CE_catalog.json  (+73 more)
(+2503 files in other folders)
