[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies]


serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
iron = "0.4.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }